src/snapshots/raoul__tests__run_vm_is_ok@condition.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/condition.ra
---
[
    "1",
    "2",
    "1",
    "\n",
]
