src/snapshots/raoul__tests__run_vm_is_ok@dataframe.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/dataframe.ra
---
[
    "13053",
    "15",
    "\n",
    "218645.22944916878",
    "\n",
    "0.15916777771148127",
    "\n",
    "0.637",
    "\n",
    "0.025334381461611516",
    "\n",
    "0",
    "\n",
    "0.987",
    "\n",
    "0.987",
    "\n",
    "-0.08547008157088816",
    "\n",
]
