src/snapshots/raoul__tests__run_vm_is_ok@factorial.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/non-plot/factorial.ra
---
[
    "120",
    "120",
    "\n",
]
