src/snapshots/raoul__tests__run_vm_is_ok@fibonacci.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/non-plot/fibonacci.ra
---
[
    "5",
    "5",
    "\n",
]
