src/snapshots/raoul__tests__run_vm_is_ok@float-to-int.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/non-plot/float-to-int.ra
---
[
    "2",
    "\n",
]
