src/snapshots/raoul__tests__run_vm_is_ok@functions-2.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/non-plot/functions-2.ra
---
[
    "10000",
    "\n",
    "10001",
    "\n",
]
