src/snapshots/raoul__tests__run_vm_is_ok@functions.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/functions.ra
---
[
    "2",
    "\n",
]
