src/snapshots/raoul__tests__run_vm_is_ok@hello-world.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/hello-world.ra
---
[
    "Hello world!",
    "\n",
]
