src/snapshots/raoul__tests__run_vm_is_ok@non-linear.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/non-plot/non-linear.ra
---
[
    "1",
    "\n",
    "2",
    "\n",
    "3",
    "\n",
    "4",
    "\n",
    "5",
    "\n",
    "6",
    "\n",
    "7",
    "\n",
    "8",
    "\n",
    "9",
    "\n",
    "0",
    "\n",
    "1",
    "\n",
    "2",
    "\n",
    "3",
    "\n",
    "4",
    "\n",
    "5",
    "\n",
    "6",
    "\n",
    "7",
    "\n",
    "8",
    "\n",
    "9",
    "\n",
    "10",
    "\n",
    "It's over 9000!",
    "\n",
]
