src/snapshots/raoul__tests__run_vm_is_ok@quick-sort.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/non-plot/quick-sort.ra
---
[
    "Before",
    "\n",
    "4",
    "\n",
    "1",
    "\n",
    "5",
    "\n",
    "12",
    "\n",
    "42",
    "\n",
    "13",
    "\n",
    "69",
    "\n",
    "25",
    "\n",
    "3",
    "\n",
    "0",
    "\n",
    "2",
    "\n",
    "After",
    "\n",
    "0",
    "\n",
    "1",
    "\n",
    "2",
    "\n",
    "3",
    "\n",
    "4",
    "\n",
    "5",
    "\n",
    "12",
    "\n",
    "13",
    "\n",
    "25",
    "\n",
    "42",
    "\n",
    "69",
    "\n",
]
